<resources>
    <string name="app_name">Health control</string>
    <string name="ok">Ok</string>
    <string name="Cancel">Отмена</string>
    <string name="pulse">Пульс</string>
    <string name="press_up">Давление верхнее</string>
    <string name="press_down">Давление нижнее</string>
    <string name="err">Не корректное значение</string>
    <string name="slash">/</string>
    <string name="_00_">00</string>
    <string name="no_data">No data</string>
</resources>